--- a/SistTestMillon/SistTestMillon/Views/Shared/_ViewMillon.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_ViewMillon.cshtml
@@ -41,6 +41,7 @@
     </script>
     <script src="~/Content/js/main.js"></script>
     <script src="~/Content/js/jquery.plugins.js"></script>
+    <script src="~/Content/Calendar/moment/main.min.js"></script>
 
     @RenderSection("scripts", false)
 </body>
