--- a/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaPsicologos.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaPsicologos.cshtml
@@ -1,96 +1,84 @@
 ﻿@model PagedList.IPagedList<Model.Psicologos>
-@using PagedList.Mvc;
+@using PagedList.Mvc
+@{ string strOrden = ""; string strImgOrder = "";}
+@using SistTestMillon.Helpers;
 
-@{
-    ViewBag.Title = "Productos";
-}
+<table class="c-table c-table--highlight u-mb-small">
+    <caption class="c-table__title">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="c-field has-addon-right">
+                    @Html.TextBox("buscando", ViewBag.CurrentSearch as string, new { @class = "c-input" })
+                    @Html.ActionLink("..", "ListaPsicologos", new { sort = ViewBag.CurrentSort, search = "xyz2" },
+             new { @class = "c-btn c-btn--info", btnName = "FilterCustomer2" })
+                </div>
+            </div>
+        </div>
+    </caption>
 
-<link href='~/Content/css/PagedList.css' rel='stylesheet' />
 
-<table>
-    <tr>
-        <td>@Html.TextBox("buscandopsicologos", ViewBag.CurrentSearch as string, new { @class = "form-control" }) </td>
-        <td>
-            @Html.ActionLink("buscar", "ListaPsicologos", new { sort = ViewBag.CurrentSort, search = "psicologos" },
-             new { @class = "btn btn-primary", btnName = "FilterCustomer3" })
-        </td>
+    <thead class="c-table__head c-table__head--slim">
 
-    </tr>
-</table>
-
-<br />
-<div id="ProductoTabla">
-    <table class="table table-bordered">
-        <tr class="btn-success">
-            <th style="text-align:center">
-                N°
-            </th>
-            <th style="text-align:center">
-                Dni
-            </th>
-            <th style="text-align:center">
-                Nombres
-            </th>
-            <th style="text-align:center">
-                Apellido Paterno
-            </th>
-            <th style="text-align:center">
-                Apellido Materno
-            </th>
-            <th style="text-align:center">
-               Sexo
-            </th>
-            <th style="text-align:center">
-                Fecha de Nacimiento
+        <tr class="c-table__row">
+            <th class="c-table__cell c-table__cell--head">N°</th>
+            <th class="c-table__cell c-table__cell--head">Dni</th>
+            <th class="c-table__cell c-table__cell--head">Nombres</th>
+            <th class="c-table__cell c-table__cell--head">Apellido Paterno</th>
+            <th class="c-table__cell c-table__cell--head">Apellido Materno</th>
+            <th class="c-table__cell c-table__cell--head">Direccion</th>
+            <th class="c-table__cell c-table__cell--head">Telefono
+                <span class="u-hidden-visually">Tools</span>
             </th>
         </tr>
-        @{int contador = -1;}
-        @foreach (var item in Model)
+
+    </thead>
+    <tbody>
+        @if (Model.Count() > 0)
             {
-                contador++;
-
-            <tr id="ProductoTabla" onclick="seleccion(@item.Dni)">
-                <td style="text-align:center">
-                    @Html.DisplayFor(modelItem => item.IdPsicologo)
-                </td>
-                <td style="text-align:center">
-                    @Html.DisplayFor(modelItem => item.Dni)
-                </td>
-                <td style="text-align:center">
-                    @Html.DisplayFor(modelItem => item.Nombres)
-                </td>
-                <td style="text-align:center">
-                    @Html.DisplayFor(modelItem => item.ApellidoPaterno)
-                </td>
-                <td style="text-align:center">
-                    @Html.DisplayFor(modelItem => item.ApellidoMaterno)
-                </td>
-                <td style="text-align:center">
-                    @Html.DisplayFor(modelItem => item.Sexo)
-                </td>
-                <td style="text-align:center">
-                    @Html.DisplayFor(modelItem => item.FechaNacimiento)
-                </td>
-            </tr>
-        }
-
-    </table>
+                foreach (var item in Model)
+                {
+                <tr class="c-table__row CodElegido" onclick="seleccion(@item.Dni)">
+                    <td class="c-table__cell">
+                        @item.IdPsicologo
+                    </td>
+                    <td class="c-table__cell">
+                        @item.Dni
+                    </td>
+                    <td class="c-table__cell">
+                        @item.Nombres
+                    </td>
+                    <td class="c-table__cell">
+                        @item.ApellidoPaterno
+                    </td>
+                    <td class="c-table__cell">
+                        @item.ApellidoMaterno
+                    </td>
+                    <td class="c-table__cell">
+                        @item.Direccion
+                    </td>
+                    <td class="c-table__cell">
+                        @item.Telefono
+                    </td>
+                </tr>
+                                }
+                            }
+                            else
+                            {
+                                <tr>
+                                    <td class="c-table__cell" colspan="10">
+                                        No tienes productos registrados
+                                    </td>
+                                </tr>
+                            }
+    </tbody>
+</table>
+<div class="dataTables_info" id="datatable_info" role="status" aria-live="polite">
+    Página @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) de @Model.PageCount
 </div>
-
-
-
-<div id="myPager2">
-    Página: @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber), de: @Model.PageCount
-    @Html.PagedListPager(Model, page => Url.Action("ListaPsicologos", new
-   {
-       page,
-       sortOrder =
-    ViewBag.CurrentSort,
-       currentFilter = ViewBag.CurrentFilter
-   }))
+<div class="dataTables_paginate paging_simple_numbers" id="myPager3">
+    @Html.PagedListPager(Model, page => Url.Action("ListaPsicologos", new { page, sort = ViewBag.CurrentSort, search = ViewBag.Buscar }))
 </div>
-
-<script type="text/javascript">
+<script>
 
         function seleccion(a) {
             var identificador = parseInt(a);
@@ -99,29 +87,37 @@
             $("#Psicologos").modal('hide');
         }
 
+        //document.getElementById("modal9").style.zIndex = "1052";
+        //document.getElementById("modal8").style.zIndex = "1051";
 
-    $('#myPager2').on('click', 'a', function (e) {
-        //prevent action link normal functionality
-        e.preventDefault();
-        var van = this.href; if (van != "" && van != null) {
-            //ajax call index controller action
-            $.ajax({
-                url: this.href,
-                type: 'GET',
-                cache: false,
-                success: function (result) {
-                    //load returned data inside contentFrame DIV
-                    $('#ListaPsicologos').html(result);
-                }
-            });
-            return false;
-        }
-    });
 
-    $("a[btnName=FilterCustomer3]").click(function (e) {
+
+
+
+
+        $('#myPager3').on('click', 'a', function (e) {
+            //prevent action link normal functionality
             e.preventDefault();
-            var search = $('input[name=buscandopsicologos]').val();
-            this.href = this.href.replace('psicologos', search);
+            var van = this.href; if (van != "" && van != null) {
+                //ajax call index controller action
+                $.ajax({
+                    url: this.href,
+                    type: 'GET',
+                    cache: false,
+                    success: function (result) {
+                        //load returned data inside contentFrame DIV
+                        $('#ListaPsicologos').html(result);
+                    }
+                });
+                return false;
+            }
+        });
+
+
+        $("a[btnName=FilterCustomer2]").click(function (e) {
+            e.preventDefault();
+            var search = $('input[name=buscando]').val();
+            this.href = this.href.replace('xyz2', search);
             $.ajax({
                 url: this.href,
                 type: 'POST',
@@ -132,6 +128,34 @@
             });
         });
 
-</script>
 
+
+        var permiteOrdenar = '';
+        $(document).ready(function () {
+            $(".permiteOrdenar").on("click", function () {
+                permiteOrdenar = $(this).data("order");
+                cargaTabla($(this).data("order"), $("#txtBuscar").val());
+            });
+            $("#btnBuscar").click(function () {
+                cargaTabla(permiteOrdenar, $("#txtBuscar").val());
+            });
+            $("#datatable_paginate").on("click", 'a', function (e) {
+                e.preventDefault();
+                $("#msgCargando").show();
+                $.ajax({
+                    url: this.href,
+                    type: 'GET',
+                    cache: false,
+                    success: function (result) {
+                        $("#msgCargando").hide();
+                        $('#ListaPsicologos').html(result);
+                    }
+                });
+            });
+        });
+
+
+
+
+</script>
 
